# virtualsre

./: .dockerignore  .gitignore  Agentic-Platform.md  Dockerfile  LLM_INTEGRATION.md  LOCAL_DEVELOPMENT.md  NATURAL_LANGUAGE_GUIDE.md  QUICKSTART.md  README.md  TOOLS_REFERENCE.md  chat.py  chat_with_mcp.py  config.py  demo_chat.sh  env.example  example_usage.py  k8s-deployment.yaml  main.py  mcp_client.py  mcp_server.py  mcp_server_with_llm.py  pyproject.toml  requirements.txt  simple_usage.py  test_kubernetes_connection.py  test_llm_decision.py  test_with_openai.py  verify_local_cluster.py
